--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,8 @@
         "ghcr.io/devcontainers/features/powershell:1.1.0": {},
         "ghcr.io/devcontainers/features/azure-cli:1.0.8": {},
         "ghcr.io/azure/azure-dev/azd:latest": {}
+"ghcr.io/devcontainers/features/node:1": {}        
+        "ghcr.io/devcontainers/features/powershell:1": {}
     },
     "customizations": {
         "vscode": {
