--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Azure Search OpenAI Demo",
+    "name": "Nova AI",
     "image": "mcr.microsoft.com/devcontainers/python:3.11",
     "features": {
         "ghcr.io/devcontainers/features/node:1": {
@@ -9,8 +9,6 @@
         "ghcr.io/devcontainers/features/powershell:1.1.0": {},
         "ghcr.io/devcontainers/features/azure-cli:1.0.8": {},
         "ghcr.io/azure/azure-dev/azd:latest": {}
-"ghcr.io/devcontainers/features/node:1": {}        
-        "ghcr.io/devcontainers/features/powershell:1": {}
     },
     "customizations": {
         "vscode": {
@@ -28,6 +26,6 @@
     "postCreateCommand": "",
     "remoteUser": "vscode",
     "hostRequirements": {
-        "memory": "8gb"
+        "memory": "16gb"
     }
 }
