--- a/azure.yaml
+++ b/azure.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
-name: NovaAI
+name: azure-search-openai-demo
 metadata:
-  template: nova-ai@0.0.2-beta
+  template: azure-search-openai-demo@0.0.2-beta
 services:
   backend:
     project: ./app/backend
